tests/rosetta/out/Java/21-game.java
// Generated by Mochi compiler v0.10.28 on 2006-01-02T15:04:05Z
// 21-game.mochi
import java.util.*;

public class M21Game {
    static int parseIntStr(String str) {
        int i = 0;
        boolean neg = false;
        if (str.length() > 0 && Objects.equals(str.substring(0, 1), "-")) {
            neg = true;
            i = (int)(1);
        }
        int n = 0;
        Digit digits = new Digit(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
        while (i < str.length()) {
            n = (int)(n * 10 + ((Number)((Map<?,?>)digits).get(str.substring(i, i + 1))).doubleValue());
            i = (int)(i + 1);
        }
        if (neg) {
            n = (int)(-n);
        }
        return n;
    }
    static void main() {
        int total = 0;
        boolean computer = Objects.equals(now() % 2, 0);
        System.out.println("Enter q to quit at any time\n");
        if (computer) {
            System.out.println("The computer will choose first");
        }
        else {
            System.out.println("You will choose first");
        }
        System.out.println("\n\nRunning total is now 0\n\n");
        int round = 1;
        boolean done = false;
        while (!done) {
            System.out.println("ROUND " + String.valueOf(round) + ":\n\n");
            int i = 0;
            while (i < 2 && (!done)) {
                if (computer) {
                    int choice = 0;
                    if (total < 18) {
                        choice = (int)(now() % 3 + 1);
                    }
                    else {
                        choice = (int)(21 - total);
                    }
                    total = (int)(total + choice);
                    System.out.println("The computer chooses " + String.valueOf(choice));
                    System.out.println("Running total is now " + String.valueOf(total));
                    if (total == 21) {
                        System.out.println("\nSo, commiserations, the computer has won!");
                        done = true;
                    }
                }
                else {
                    while (true) {
                        System.out.println("Your choice 1 to 3 : ");
                        Object line = input();
                        if (Objects.equals(line, "q") || Objects.equals(line, "Q")) {
                            System.out.println("OK, quitting the game");
                            done = true;
                            break;
                        }
                        int num = parseIntStr(line);
                        if (num < 1 || num > 3) {
                            if (total + num > 21) {
                                System.out.println("Too big, try again");
                            }
                            else {
                                System.out.println("Out of range, try again");
                            }
                            continue;
                        }
                        if (total + num > 21) {
                            System.out.println("Too big, try again");
                            continue;
                        }
                        total = (int)(total + num);
                        System.out.println("Running total is now " + String.valueOf(total));
                        break;
                    }
                    if (total == 21) {
                        System.out.println("\nSo, congratulations, you've won!");
                        done = true;
                    }
                }
                System.out.println("\n");
                computer = !computer;
                i = (int)(i + 1);
            }
            round = (int)(round + 1);
        }
    }
    public static void main(String[] args) {
        main();
    }
}
